Fix z-index issue with date picker.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,6 +33,10 @@
 //   nav ul     { font-size: 0.9em; }
 // }
 
+.pika-single {
+    z-index: 100;
+}
+
 #login-form .form-control{
   width: 400px;
   max-width: 100%;
